# HopenetMNNAndroidSample

./: .gitignore  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hopenet_lite_fp16.mnn
app/src/main/java/com/ghlab/mnnsample/: ActivityExtensions.kt  AutoFitTextureView.kt  CameraBasicFragment.kt  CompareSizesByArea.kt  ConfirmationDialog.kt  Constants.kt  ErrorDialog.kt  ImageSaver.kt  MainActivity.kt
app/src/main/java/com/ghlab/mnnsample/jni/: HeadPoseDetector.kt  HeadPoseDetectorJNI.java  HeadPoseResult.java
app/src/main/jni/: CMakeLists.txt  HeadPoseDetector.cpp  HeadPoseDetector.hpp  HeadPoseDetectorJNI.cpp  HeadPoseDetectorJNI.hpp
app/src/main/jni/include/MNN/: VCS.h
app/src/main/jni/include/MNN/expr/: Expr.hpp
app/src/main/res/layout/: fragment_camera.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
